# ProcGraficoGB

./: .gitignore  CMakeLists.txt  README.md  _color_fs.glsl  _color_vs.glsl  _sprite_fs.glsl  main.cpp  map.txt
GLAD/include/glad/: glad.h
GLAD/src/: glad.c
